--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,7 +1,7 @@
 
 {% extends 'admin.twig' %}
 
-{% set title %}{{'BotTracker_BotTracker'|translate}}{% endset %}
+{% set title %}{{'BotTracker_Bot_Tracker'|translate}}{% endset %}
 
 {% block content %}
 {% import 'macros.twig' as piwik %}
@@ -26,7 +26,7 @@
 <div class="card">
   <div class="card-content">
     <div id="presentation">
-      <h2>{{'BotTracker_BotTracker'|translate}}</h2>
+      <h2>{{'BotTracker_Bot_Tracker'|translate}}</h2>
       <p>{{'BotTracker_PluginDescription'|translate}}</p>
 
       <p>{{'BotTracker_SelectAWebsite'|translate}}</p>
@@ -46,7 +46,7 @@
   <form method="POST" action="{{ linkTo({'module':'BotTracker','action':'saveConfig'}) }}">
   <table class="card card-table entityTable">
     <thead>
-        <tr><th>BotID</th>
+        <tr>
             <th>SiteID</th>
             <th>{{'BotTracker_BotActive'|translate}}</th>
             <th>{{'BotTracker_ExtraStats'|translate}}</th>
@@ -57,7 +57,6 @@
     </thead>
 	{% for bot in botList %}
     <tr>
-        <td>{{bot.botId}}</td>
         <td>{{bot.idsite}}</td>
         <td>
           <label>
