cleanup, fixes of PHP standards, removal of legacy

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -95,7 +95,7 @@
         <input type="hidden" value="{{ idSite }}" name="siteID" />
         <input
             type="submit"
-            value="{{'BotTracker_insert_db'|translate}} (35)"
+            value="{{'BotTracker_insert_db'|translate}}"
             name="submit"
             class="btn" />
       </form>
